# PAIM

./: .gitattributes  .gitignore  LICENSE
backend/: README.md  pyproject.toml  vercel.json
backend/infrastructure/api/: main.py
backend/infrastructure/api/endpoints/: client.py  product.py
backend/infrastructure/api/services/: client_service.py  product_service.py
backend/infrastructure/models/: upload_product_model.py
backend/infrastructure/mongo/: client_handler.py  product_handler.py
backend/tests/: test_product.py
frontend/: .eslintrc.cjs  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: Cart.tsx  CartItem.tsx  CartSummary.tsx  Header.tsx  LoginForm.tsx  ProductCard.tsx
frontend/src/hooks/: registerClients.ts  useClients.ts  useProducts.ts
frontend/src/pages/: About.tsx  Cart.tsx  Contact.tsx  Home.tsx  Login.tsx  Register.tsx
frontend/src/styles/: app.css
